kubernetes/vanilla/vanilla-chip.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanilla-chip
  namespace: vanilla-namespace
spec:
  selector:
    matchLabels:
      app: vanilla-chip-label
  template:
    metadata:
      labels:
        app: vanilla-chip-label
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/usr/share/nginx/html/index.html"
            subPath: index.html
            name: vanilla-chip-config
      volumes:
        - configMap:
            name: vanilla-chip-config
          name: vanilla-chip-config

---

apiVersion: v1
kind: Service
metadata:
  name: vanilla-chip-service
  namespace: vanilla-namespace
spec:
  selector:
    app: vanilla-chip-label
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vanilla-chip-ingress
  namespace: vanilla-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: vanilla.cube.tanat44.com
    http:
      paths:
      - path: /chip
        pathType: Prefix
        backend:
          service:
            name: vanilla-chip-service
            port:
              number: 80
